logs/gists.cli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gists.cli-0.351.egg-info'...
Listing './lib/python3.5/site-packages/gists_cli'...
Compiling './lib/python3.5/site-packages/gists_cli/actions.py'...
***   File "./lib/python3.5/site-packages/gists_cli/actions.py", line 80
    print table.draw()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gists_cli/api.py'...
***   File "./lib/python3.5/site-packages/gists_cli/api.py", line 33
    print "New token written to: " + HOME + TOKENFILE
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gists_cli/bak.gists.py'...
***   File "./lib/python3.5/site-packages/gists_cli/bak.gists.py", line 80
    print 'Unfortunately, no command match found for supplied arguments.'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gists_cli/gists.py'...
***   File "./lib/python3.5/site-packages/gists_cli/gists.py", line 71
    print 'Unfortunately, no command match found for supplied arguments.'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gists_cli/log.py'...
***   File "./lib/python3.5/site-packages/gists_cli/log.py", line 15
    print '>> ' + str(obj)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gists_cli/util.py'...
***   File "./lib/python3.5/site-packages/gists_cli/util.py", line 139
    print "------------------------------------------------------------------------------------------" + msg
                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/texttable-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
